--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -1,6 +1,6 @@
 app:
   tabs:
-    default: references
+    default: summary
 
 selectors:
   prologue: I am interested in information about projected climate change ...
@@ -216,14 +216,20 @@ maps:
         min: -50
         max: 50
       ticks: [-50, 0, 50]
+    fdd:
+      palette: x-Occam
+      range:
+        min: 0
+        max: 4000
+      ticks: [0, 1000, 2000, 3000, 4000]
     gdd:
-      palette: seq-Oranges
+      palette: x-Occam
       range:
         min: 0
         max: 4000
       ticks: [0, 1000, 2000, 3000, 4000]
     hdd:
-      palette: seq-Oranges
+      palette: x-Occam
       range:
         min: 0
         max: 10000
@@ -234,14 +240,26 @@ maps:
         min: 0
         max: 20
       ticks: [0, 5, 10, 15, 20]
+    prsn:
+      palette: x-Occam
+      range:
+        min: 0
+        max: 20
+      ticks: [0, 5, 10, 15, 20]
     tasmax:
-      palette: div-BuRd
+      palette: x-Occam
       range:
         min: -40
         max: 40
       ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
     tasmin:
-      palette: div-BuRd
+      palette: x-Occam
+      range:
+        min: -40
+        max: 40
+      ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
+    tasmean:
+      palette: x-Occam
       range:
         min: -40
         max: 40
