Update map display spec for logscaled variables

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -210,6 +210,7 @@ maps:
   displaySpec:
     fallback:
       palette: seq-Oranges
+      logscale: false
       aboveMaxColor: black
       belowMinColor: black
       range:
@@ -236,16 +237,18 @@ maps:
       ticks: [0, 2000, 4000, 6000, 8000, 10000]
     pr:
       palette: seq-Greens
+      logscale: true
       range:
-        min: 0
+        min: 0.1
         max: 20
-      ticks: [0, 5, 10, 15, 20]
+      ticks: [0.1, 0.2, 0.5, 1, 2, 5, 10, 20]
     prsn:
       palette: x-Occam
+      logscale: true
       range:
-        min: 0
+        min: 0.1
         max: 20
-      ticks: [0, 5, 10, 15, 20]
+      ticks: [0.1, 0.2, 0.5, 1, 2, 5, 10, 20]
     tasmax:
       palette: x-Occam
       range:
