Impacts tab: strike "peer"

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -106,7 +106,7 @@ impacts:
     These are based on limited climate change information, as shown in the
     detailed rules logic.
     These rules were developed based on a workshop attended by climate
-    impacts experts and subsequent peer review.
+    impacts experts and subsequent review.
     Although quite comprehensive, the rules are a work in progress, and some
     key impacts or management implications may be missing.
     We welcome contributions and suggestions from users of Plan2Adapt.
