--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.5.0",
+    "react-input-range": "^1.3.0",
     "react-leaflet": "^2.1.4",
     "react-loader": "^2.4.5",
     "react-markdown": "^4.0.6",
