--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -12,7 +12,7 @@ selectors:
     default: 2050
   variable:
     prefix: ... with details about
-    default: pr
+    default: tasmax
   season:
     prefix: for a typical
     postfix: period
@@ -216,6 +216,7 @@ maps:
       range:
         min: -50
         max: 50
+        step: 5
       ticks: [-50, 0, 50]
     ffd:
       palette: x-Occam
@@ -228,12 +229,14 @@ maps:
       range:
         min: 0
         max: 4000
+        step: 500
       ticks: [0, 1000, 2000, 3000, 4000]
     hdd:
       palette: x-Occam
       range:
         min: 0
         max: 10000
+        step: 500
       ticks: [0, 2000, 4000, 6000, 8000, 10000]
     pr:
       palette: seq-Greens
@@ -241,6 +244,7 @@ maps:
       range:
         min: 0.1
         max: 20
+        step: 0.1
       ticks: [0.1, 0.2, 0.5, 1, 2, 5, 10, 20]
     prsn:
       palette: x-Occam
@@ -254,18 +258,21 @@ maps:
       range:
         min: -40
         max: 40
+        step: 5
       ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
     tasmin:
       palette: x-Occam
       range:
         min: -40
         max: 40
+        step: 5
       ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
     tasmean:
       palette: x-Occam
       range:
         min: -40
         max: 40
+        step: 5
       ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
 
 graph:
@@ -498,6 +505,7 @@ components:
 
 colourScale:
   label: ${variable} (${units})
+  rangeLabel: Minimum and maximum data values for colour scale
   note: '*Note: This colour scale applies to both maps.*'
 
 variables:
