--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "proj4leaflet": "^1.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.6",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-icons": "^3.5.0",
     "react-leaflet": "^2.1.4",
