--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -35,10 +35,10 @@ summary:
       variable: |
         ${variable.label}${variable.derived ? '*': ''} (${variable.units})
       season: ${season.label}
-      ensembleMedian: ${format(season.ensembleMedian)}${units}
+      ensembleMedian: ${format(season.percentiles[1])}${unitsSuffix(variable.units)}
       range: |
-        ${format(season.range.min)}${isLong(units) ? '': units} to
-        ${format(season.range.max)}${units}
+        ${format(season.percentiles[0])}${isLong(variable.units) ? '': unitsSuffix(variable.units)} to
+        ${format(season.percentiles[2])}${unitsSuffix(variable.units)}
     contents:
       - variable: tasmean
         display: absolute
@@ -72,7 +72,7 @@ summary:
           - annual
       - variable: ffd
         display: absolute
-        precision: 4
+        precision: 2
         seasons:
           - annual
   notes:
@@ -492,18 +492,31 @@ colourScale:
 
 variables:
   tasmax:
+    label: Maximum Temperature
     units: °C
   tasmin:
+    label: Minimum Temperature
     units: °C
   tasmean:
+    label: Temperature
+    derived: true
     units: °C
   pr:
+    label: Precipitation
     units: mm/d
   prsn:
+    label: Snowfall
+    derived: true
     units: ??
   gdd:
+    label: Growing Degree-Days
+    derived: true
     units: degree days
   hdd:
+    label: Heating Degree-Days
+    derived: true
     units: degree days
   ffd:
+    label: Frost-Free Days
+    derived: true
     units: days
