Add Dev tab containing colourbar only

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -1,6 +1,6 @@
 app:
   tabs:
-    default: summary
+    default: dev
 
 selectors:
   prologue: I am interested in information about projected climate change ...
