--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -213,8 +213,8 @@ maps:
     fallback:
       palette: seq-Oranges
       logscale: false
+      belowMinColor: white
       aboveMaxColor: black
-      belowMinColor: black
       range:
         min: -50
         max: 50
@@ -240,6 +240,8 @@ maps:
     pr:
       palette: seq-Greens
       logscale: true
+      belowMinColor: white
+      aboveMaxColor: black
       range:
         min: 10
         max: 10000
