Use production CE backend

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/plan2adapt/ceb
+REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/pcex/api/
 REACT_APP_TILECACHE_URL=https://b.tile.pacificclimate.org/tilecache/tilecache.py
 REACT_APP_NCWMS_URL=https://services.pacificclimate.org/pcex/ncwms
 REACT_APP_REGIONS_SERVICE_URL=https://services.pacificclimate.org/plan2adapt/regions/ows
