--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -280,6 +280,8 @@ graph:
   tab: Graphs
   title: "## Range of projected change in ${season} ${variable} for ${region}"
   config:
+    size:
+      height: 600
     futureTimePeriods:
       # This may be better obtained from metadata
       - { start_date: "2010", end_date: "2039" }
