Specify node version

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Node.js 9.x
+    - name: Set up Node.js 9.2
       uses: actions/setup-node@v1
       with:
-        node-version: 9.x
+        node-version: 9.2
     - name: Node.js Test Suite
       run: |
         npm install
