--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         echo ::set-env name=BRANCH::$(echo ${BRANCH_NAME})
         echo ::set-env name=TAG::$(echo ${GIT_TAG_NAME})
-    - name: Run commitish script
+    - name: Export REACT_APP_VERSION env var
       run: ./generate-commitish.sh
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
