--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -22,7 +22,355 @@ dev-colourbar:
   visible: false
 
 dev-graph:
-  visible: false
+  visible: true
+  charts:
+    - title: Stacked with unified 25-75, NO 50, large ordering values
+      comment: |
+        Works. Evidently the largest values globally determine the ordering.
+        Tiresome but doable. Must constrain y-axis to include only actual
+        data values; with large ordering values, default range is far too great.
+        Icky thought: What about negative values?
+        Notes: Bar width ratio = 2.5. Legend for 0-10 is hidden.
+      options:
+        size:
+          height: 600
+        axis:
+          x:
+            type: indexed
+            label:
+              text: Time Period (middle year)
+              position: outer-center
+            min: 1960
+            max: 2100
+            tick:
+              values: [
+                1960, 1970, 1980, 1990, 2000, 2010, 2020,
+                2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+              ]
+          y:
+            type: linear
+            min: 0
+            max: 1000
+            label:
+              text: Change in variable
+              position: outer-middle
+        data:
+          x: time
+          rows:
+            - ['time', '0-10th',  '10-25th', '25-75th',   '75-90th']
+            # fake data row to impose desired ordering of datasets in stacks
+            - [0,       0,          1000,          2000,          3000]
+            - [1975,    0,          0,          0,          0]
+            - [2025,    200,        190,        350,        160]
+            - [2055,    20,         60,         210,        150]
+            - [2085,    30,         70,         230,        160]
+          type: bar
+          types:
+            '50th': line
+          groups:
+            - ['0-10th',  '10-25th', '25-75th', '75-90th']
+          colors:
+            '50th': black
+            '0-10th': transparent
+            '10-25th': '#cccccc'
+            '75-90th': '#cccccc'
+            '25-75th': '#aaaaaa'
+        legend:
+          hide: '0-10th'
+        bar:
+          width:
+            ratio: 2.5
+
+    - title: Stacked with unified 25-75, NO 50
+      comment: |
+        Fail. Why? Mabe becaue of large values of 25-75, which are the sum of
+        25-50 and 50-75. Somehow that is determining the ordering?
+      options:
+        size:
+          height: 600
+        axis:
+          x:
+            type: indexed
+            label:
+              text: Time Period (middle year)
+              position: outer-center
+            min: 1960
+            max: 2100
+            tick:
+              values: [
+                1960, 1970, 1980, 1990, 2000, 2010, 2020,
+                2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+              ]
+          y:
+            type: linear
+            label:
+              position: outer-middle
+        data:
+          x: time
+          rows:
+            - ['time', '00-10th',  '10-25th', '25-75th',   '75-90th']
+            # fake data row to impose desired ordering of datasets in stacks
+            - [0,       0,          1,          2,          3]
+            - [1975,    0,          0,          0,          0]
+            - [2025,    200,        190,        350,        160]
+            - [2055,    20,         60,         210,        150]
+            - [2085,    30,         70,         230,        160]
+          type: bar
+          types:
+            '50th': line
+          groups:
+            - ['00-10th',  '10-25th', '25-75th', '75-90th']
+          colors:
+            '50th': black
+            '00-10th': transparent
+            '10-25th': '#cccccc'
+            '75-90th': '#cccccc'
+            '25-75th': '#aaaaaa'
+
+    - title: Stacked with separate 25-50 and 50-75, NO 50
+      comment: Works. Try with unified 25-75 next.
+      options:
+        size:
+          height: 600
+        axis:
+          x:
+            type: indexed
+            label:
+              text: Time Period (middle year)
+              position: outer-center
+            min: 1960
+            max: 2100
+            tick:
+              values: [
+                1960, 1970, 1980, 1990, 2000, 2010, 2020,
+                2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+              ]
+          y:
+            type: linear
+            label:
+              position: outer-middle
+        data:
+          x: time
+          rows:
+            - ['time', '00-10th',  '10-25th', '25-50th',   '50-75th',   '75-90th']
+            # fake data row to impose desired ordering of datasets in stacks
+            - [0,       0,          1,          2,          3,          4]
+            - [1975,    0,          0,          0,          0,          0]
+            - [2025,    200,        190,        180,       170,       160]
+            - [2055,    20,        60,        90,          120,       150]
+            - [2085,    30,        70,        100,         130,       160]
+          type: bar
+          types:
+            '50th': line
+          groups:
+            - ['00-10th',  '10-25th', '25-50th',   '50-75th',   '75-90th']
+          colors:
+            '50th': black
+            '00-10th': transparent
+            '10-25th': '#cccccc'
+            '75-90th': '#cccccc'
+            '25-50th': '#aaaaaa'
+            '50-75th': '#aaaaaa'
+
+    - title: Stacked with separate 25-50 and 50-75, 50 middle
+      comment: Works.
+      options:
+        size:
+          height: 600
+        axis:
+          x:
+            type: indexed
+            label:
+              text: Time Period (middle year)
+              position: outer-center
+            min: 1960
+            max: 2100
+            tick:
+              values: [
+                1960, 1970, 1980, 1990, 2000, 2010, 2020,
+                2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+              ]
+          y:
+            type: linear
+            label:
+              position: outer-middle
+        data:
+          x: time
+          # This works, apparently because the ordering of data sets in the stacks
+          # is determined by the value of the first (in x-order) datum for each
+          # dataset. How we do this is to create a row of fake data whose purpose
+          # is solely to impose desired ordering of datasets in stacks, and give
+          # it a time value outside the window of the x-axis so that it is not
+          # visible.
+          # Hence the values 0, 1, 2, 3, 4 for the time=0 for the stacked
+          # datasets.
+          rows:
+            - ['time', '00-10th',  '10-25th', '25-50th',   '50th',   '50-75th',   '75-90th']
+            # fake data row to impose desired ordering of datasets in stacks
+            - [0,       0,          1,          2,          0,        3,          4]
+            - [1975,    0,          0,          0,          0,        0,          0]
+            - [2025,    200,        190,        180,       100,      170,       160]
+            - [2055,    20,        60,        90,          120,      120,       150]
+            - [2085,    30,        70,        100,         140,      130,       160]
+          type: bar
+          types:
+            '50th': line
+          groups:
+            - ['00-10th',  '10-25th', '25-50th',   '50-75th',   '75-90th']
+          colors:
+            '50th': black
+            '00-10th': transparent
+            '10-25th': '#cccccc'
+            '75-90th': '#cccccc'
+            '25-50th': '#aaaaaa'
+            '50-75th': '#aaaaaa'
+
+    - title: Stacked with separate 25-50 and 50-75, 50 last
+      comment: Works.
+      options:
+        size:
+          height: 600
+        axis:
+          x:
+            type: indexed
+            label:
+              text: Time Period (middle year)
+              position: outer-center
+            min: 1960
+            max: 2100
+            tick:
+              values: [
+                1960, 1970, 1980, 1990, 2000, 2010, 2020,
+                2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+              ]
+          y:
+            type: linear
+            label:
+              position: outer-middle
+        data:
+          x: time
+          # This works, apparently because the ordering of data sets in the stacks
+          # is determined by the value of the first (in x-order) datum for each
+          # dataset. How we do this is to create a row of fake data whose purpose
+          # is solely to impose desired ordering of datasets in stacks, and give
+          # it a time value outside the window of the x-axis so that it is not
+          # visible.
+          # Hence the values 0, 1, 2, 3, 4 for the time=0 for the stacked
+          # datasets.
+          rows:
+            - ['time', '00-10th',  '10-25th', '25-50th',   '50-75th',   '75-90th',   '50th']
+            # fake data row to impose desired ordering of datasets in stacks
+            - [0,       0,          1,          2,        3,          4,          0]
+            - [1975,    0,          0,          0,          0,        0,          0]
+            - [2025,    200,        190,        180,      170,       160,       100]
+            - [2055,    20,        60,        90,      120,       150,          120]
+            - [2085,    30,        70,        100,      130,       160,         140]
+          type: bar
+          types:
+            '50th': line
+          groups:
+            - ['00-10th',  '10-25th', '25-50th',   '50-75th',   '75-90th']
+          colors:
+            '50th': black
+            '00-10th': transparent
+            '10-25th': '#cccccc'
+            '75-90th': '#cccccc'
+            '25-50th': '#aaaaaa'
+            '50-75th': '#aaaaaa'
+
+    - title: Stacked with single 25-75, 50 last
+      comment: Fails. Not clear why. Maybe because 25-75 values are very large? Yuck.
+      options:
+        size:
+          height: 600
+        axis:
+          x:
+            type: indexed
+            label:
+              text: Time Period (middle year)
+              position: outer-center
+            min: 1960
+            max: 2100
+            tick:
+              values: [
+                1960, 1970, 1980, 1990, 2000, 2010, 2020,
+                2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+              ]
+          y:
+            type: linear
+            label:
+              position: outer-middle
+        data:
+          x: time
+          # This doesn't work: For some reason cannot impose desired ordering
+          # on stacks. That is worrying, but if the split setup works, it is fine.
+          rows:
+            - ['time', '00-10th',  '10-25th', '25-75th',   '50th',   '75-90th']
+            # fake data row to impose desired ordering of datasets in stacks
+            - [0,       0,          1,          2,            3,          0]
+            # real data rows
+            - [1975,    0,          0,          0,          0,             0]
+            - [2025,    200,        190,        350,          160,       100]
+            - [2055,    20,        60,        210,          150,          120]
+            - [2085,    30,        70,        230,           160,         140]
+          type: bar
+          types:
+            '50th': line
+          groups:
+            - ['00-10th',  '10-25th', '25-75th', '75-90th']
+          colors:
+            '50th': black
+            '00-10th': transparent
+            '10-25th': '#cccccc'
+            '75-90th': '#cccccc'
+            '25-75th': '#aaaaaa'
+
+    - title: Stacked with single 25-75, 50 middle(ish)
+      comment: Fails. Not clear why. Could try with 50 last.
+      options:
+        size:
+          height: 600
+        axis:
+          x:
+            type: indexed
+            label:
+              text: Time Period (middle year)
+              position: outer-center
+            min: 1960
+            max: 2100
+            tick:
+              values: [
+                1960, 1970, 1980, 1990, 2000, 2010, 2020,
+                2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+              ]
+          y:
+            type: linear
+            label:
+              position: outer-middle
+        data:
+          x: time
+          # This doesn't work: For some reason cannot impose desired ordering
+          # on stacks. That is worrying, but if the split setup works, it is fine.
+          rows:
+            - ['time', '00-10th',  '10-25th', '25-75th',   '50th',   '75-90th']
+            # fake data row to impose desired ordering of datasets in stacks
+            - [0,       0,          1,          2,          0,            3]
+            # real data rows
+            - [1975,    0,          0,          0,          0,             0]
+            - [2025,    200,        190,        350,       100,          160]
+            - [2055,    20,        60,        210,          120,          150]
+            - [2085,    30,        70,        230,         140,           160]
+          type: bar
+          types:
+            '50th': line
+          groups:
+            - ['00-10th',  '10-25th', '25-75th', '75-90th']
+          colors:
+            '50th': black
+            '00-10th': transparent
+            '10-25th': '#cccccc'
+            '75-90th': '#cccccc'
+            '25-75th': '#aaaaaa'
 
 summary:
   disabled: false
@@ -331,7 +679,6 @@ graph:
         display: relative
       tasmean:
         display: absolute
-
 
 notes:
   disabled: false
