--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -631,6 +631,48 @@ graph:
   tab: Graphs
   title: "## Range of projected change in ${season} ${variable} for ${region}"
   config:
+    c3options2:
+      size:
+        height: 600
+      axis:
+        x:
+          type: indexed
+          label:
+            text: Time Period (middle year)
+            position: outer-center
+          min: 1960
+          max: 2100
+          tick:
+            values: [
+              1960, 1970, 1980, 1990, 2000, 2010, 2020,
+              2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+            ]
+        y:
+          type: linear
+          # must set min, max programmatically
+          label:
+            text: Change in variable
+            position: outer-middle
+      data:
+        x: time
+        type: bar
+        types:
+          '50th': line
+        groups:
+          - ['0-10th',  '10-25th', '25-50th', '50-75th', '75-90th']
+        colors:
+          '50th': black
+          '0-10th': transparent
+          '10-25th': '#cccccc'
+          '75-90th': '#cccccc'
+          '25-50th': '#aaaaaa'
+          '50-75th': '#aaaaaa'
+      legend:
+        hide: '0-10th'
+      bar:
+        width:
+          ratio: 2.5
+
     c3options:
       # C3 option values to be merged with computed options values.
       size:
