--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -631,6 +631,28 @@ graph:
   tab: Graphs
   title: "## Range of projected change in ${season} ${variable} for ${region}"
   config:
+    c3options3:
+      # C3 option values to be merged with computed options values.
+      size:
+        height: 600
+      axis:
+        x:
+          type: indexed
+          label:
+            text: Time Period (middle year)
+            position: outer-center
+          min: 1960
+          max: 2100
+          tick:
+            values: [
+              1960, 1970, 1980, 1990, 2000, 2010, 2020,
+              2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
+            ]
+        y:
+          type: linear
+          label:
+            position: outer-middle
+
     c3options2:
       size:
         height: 600
