Update x axis title

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -668,7 +668,7 @@ graph:
         x:
           type: indexed
           label:
-            text: Time Period (middle year)
+            text: Year
             position: outer-center
           min: 1960
           max: 2100
