--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -662,77 +662,7 @@ graph:
         show: false
 
     c3optionsBarChart:
-      size:
-        height: 600
-      axis:
-        x:
-          type: indexed
-          label:
-            text: Year
-            position: outer-center
-          min: 1960
-          max: 2100
-          tick:
-            values: [
-              1960, 1970, 1980, 1990, 2000, 2010, 2020,
-              2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
-            ]
-        y:
-          type: linear
-          # must set min, max programmatically
-          label:
-            text: Change in variable
-            position: outer-middle
-      grid:
-        x:
-          lines:
-            - value: 1976
-              text: 1970s (baseline)
-            - value: 2025
-              text: 2020s
-            - value: 2055
-              text: 2050s
-            - value: 2085
-              text: 2020s
-      data:
-        x: time
-        type: bar
-        order: null
-        types:
-          '10th': line
-          '25th': line
-          '50th': line
-          '75th': line
-          '90th': line
-        groups:
-          - ['0-10th', '10-25th', '25-50th', 'median', '50-75th', '75-90th']
-        colors:
-          '10th': transparent
-          '90th': transparent
-          '25th': transparent
-          '75th': transparent
-#          '10th': '#cccccc'
-#          '90th': '#cccccc'
-#          '25th': '#aaaaaa'
-#          '75th': '#aaaaaa'
-          '50th': black
-          '0-10th': transparent
-          '10-25th': '#cccccc'
-          '75-90th': '#cccccc'
-          '25-50th': '#aaaaaa'
-          '50-75th': '#aaaaaa'
-          median: black
-#          '0-10th': red
-#          '10-25th': orange
-#          '25-50th': yellow
-#          '50-75th': green
-#          '75-90th': blue
-#        hide: ['10th', '25th', '75th', '90th', ]
-      legend:
-        hide: ['0-10th', '10th', '25th', '75th', '90th']
-      bar:
-        width:
-          ratio: 2.5
+      # CAUTION: These options *override* the ones supplied in code.
 
     c3optionsSimpleLine:
       # C3 option values to be merged with computed options values.
