--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -16,7 +16,7 @@ selectors:
     forTabs: ['summary', 'impacts', 'maps']
   variable:
     prefix: with details about
-    default: gdd
+    default: prsn
     forTabs: ['maps', 'graphs']
   season:
     prefix: for a typical
@@ -452,6 +452,7 @@ summary:
     derivedVars: |
       &ast; These values are derived from temperature and/or precipitation.
 
+
 impacts:
   disabled: false
   tab: Impacts
@@ -637,61 +638,9 @@ graph:
   tab: Graphs
   title: "## Range of projected change in ${season} ${variable} for ${region}"
   config:
-    c3optionsPseudoFilled:
-      # C3 option values to be merged with computed options values.
-      size:
-        height: 600
-      axis:
-        x:
-          type: indexed
-          label:
-            text: Time Period (middle year)
-            position: outer-center
-          min: 1960
-          max: 2100
-          tick:
-            values: [
-              1960, 1970, 1980, 1990, 2000, 2010, 2020,
-              2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
-            ]
-        y:
-          type: linear
-          label:
-            position: outer-middle
-      point:
-        show: false
-
-    c3optionsBarChart:
+    c3options:
       # CAUTION: These options *override* the ones supplied in code.
 
-    c3optionsSimpleLine:
-      # C3 option values to be merged with computed options values.
-      size:
-        height: 600
-      axis:
-        x:
-          type: indexed
-          label:
-            text: Time Period (middle year)
-            position: outer-center
-          min: 1960
-          max: 2100
-          tick:
-            values: [
-              1960, 1970, 1980, 1990, 2000, 2010, 2020,
-              2030, 2040, 2050, 2060, 2070, 2080, 2090, 2100
-            ]
-        y:
-          type: linear
-          label:
-            position: outer-middle
-      data:
-        colors:
-          10th: '#cccccc'
-          90th: '#cccccc'
-          25th: '#aaaaaa'
-          75th: '#aaaaaa'
-          50th: black
     futureTimePeriods:
       # This may be better obtained from metadata
       - { start_date: "2010", end_date: "2039" }
