--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -633,7 +633,7 @@ maps:
         max: 40
       ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
 
-graph:
+graphs:
   disabled: false
   tab: Graphs
   title: "## Range of projected change in ${season} ${variable} for ${region}"
